src/qbert_py_laserfollow/log/build_2023-03-22_14-41-26/qbert_py_laserfollow/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/johnma/ros2_ws/src/qbert_py_laserfollow/install/qbert_py_laserfollow/lib/python3.10/site-packages/qbert_py_laserfollow/laserfollow.py", line 45
    print(f"front: {ranges[-1]}, left: {ranges[left]}, right: {ranges[right]}, back: {ranges[back]})
          ^
SyntaxError: unterminated string literal (detected at line 45)

